FIXED - column gap, section about column resp

--- a/css/app.css
+++ b/css/app.css
@@ -14,7 +14,7 @@ ul, li, menu, a {
 }
 
 .hero-avatar > .hero-avatar-img {
-    width: 30%;
+    max-width: 200px;
 }
 
 main .hero,
